# university-projects

./: README.md
bachelor/sem1/PRI/homework/: countries.txt  main.c
bachelor/sem1/PRI/project-1/: calculator.c
bachelor/sem1/PRI/project-2/: Makefile
bachelor/sem1/PRI/project-3/: Makefile
bachelor/sem2/PROI/lab0/: .gitignore  Makefile  main.cpp
bachelor/sem2/PROI/lab1-player-resources/: Makefile
bachelor/sem2/PROI/lab2-graph-bfs/: Makefile
bachelor/sem3/AISDI/lab2/: main  (+2 more)
bachelor/sem4/BD1/: 0.drop_everything.sql  1.tworzenie_tabel.sql  2.generatory_danych.sql  3.triggery.sql  4.generuj_dane.sql  5.selecty.sql  6.indexy_hinty.sql
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/: .gitignore  CMakeLists.txt  README.md
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/include/: alsa.h
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/src/: alsa.cpp  latencyTest.cpp
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/src/Consumer/: consumer.cpp
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/src/Supervisor/: main.cpp
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/src/Supplier/: supplier.cpp
bachelor/sem5/SCZR/SCZR_VoiceChangerSystem/src/VoiceChanger/: voiceChanger.cpp
bachelor/sem6/IUM/: .gitignore
bachelor/sem6/TIN/TIN_TorrentLikeP2P/: .gitignore  CMakeLists.txt  README.md  main.cpp
bachelor/sem6/TIN/TIN_TorrentLikeP2P/include/structs/: ConnectedPeerInfo.h  Message.h  ResourceInfo.h  SharedStructs.h  SynchronizedFile.h
bachelor/sem6/TIN/TIN_TorrentLikeP2P/include/threads/: CliThread.h  TcpThread.h  TorrentClient.h  UdpThread.h
bachelor/sem6/TIN/TIN_TorrentLikeP2P/include/utils/: CliParser.h  utils.h
bachelor/sem6/TIN/TIN_TorrentLikeP2P/src/structs/: Message.cpp  ResourceInfo.cpp  SharedStructs.cpp  SynchronizedFile.cpp
bachelor/sem6/TIN/TIN_TorrentLikeP2P/src/threads/: CliThread.cpp  TcpThread.cpp  TorrentClient.cpp  UdpThread.cpp
bachelor/sem6/TIN/TIN_TorrentLikeP2P/src/utils/: CliParser.cpp  utils.cpp
bachelor/sem6/UXP1A/UXP1A-Linda-language/: .gitignore  CMakeLists.txt  README.md
bachelor/sem6/UXP1A/UXP1A-Linda-language/include/: ConstsAndEnums.h  SerializationUtils.h
bachelor/sem6/UXP1A/UXP1A-Linda-language/include/client/: linda.h
bachelor/sem6/UXP1A/UXP1A-Linda-language/include/server/: MasterProcess.h  WaitingProcess.h
bachelor/sem6/UXP1A/UXP1A-Linda-language/include/tuple/: Tuple.h  TuplePattern.h
bachelor/sem6/UXP1A/UXP1A-Linda-language/src/: ins1  ins2.1  ins2.2  linda-client.cpp  linda-server.cpp  run-server.sh  test-script.sh
bachelor/sem6/UXP1A/UXP1A-Linda-language/src/client/: linda.cpp
bachelor/sem6/UXP1A/UXP1A-Linda-language/src/server/: MasterProcess.cpp  WaitingProcess.cpp
bachelor/sem6/UXP1A/UXP1A-Linda-language/src/tuple/: Tuple.cpp  TuplePattern.cpp
bachelor/sem6/UXP1A/UXP1A-Linda-language/src/util/: SerializationUtils.cpp
bachelor/sem6/UXP1A/UXP1A-Linda-language/test/: CMakeLists.txt  service_tests.cpp  tuple_tests.cpp
(+698 files in other folders)
